# dev-wallet

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: app.tsx  main.tsx  state.ts
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/diagrams/: database.mmd
src-tauri/migrations/: 20240808_create_wallet_table.sql  20240809_create_account_table.sql  20240810_drop_master_column_from_wallets.sql
src-tauri/src/: account.rs  config.rs  db.rs  lib.rs  main.rs  path_builder.rs  seed.rs  sqlite.rs  storage.rs  utils.rs  vault_interface.rs  wallet.rs
src-tauri/src/migrations/: 20240808_create_account_table.sql  20240808_create_wallet_table.sql
src-tauri/src/transaction/: btc.rs  mod.rs
src-tauri/src/vault/: account.rs  interface.rs  mod.rs  sqlite.rs  wallet.rs
src-tauri/tests/: lib.rs  main.rs
src/components/: confirm-password.tsx  error.tsx  fallback-error.tsx  internal-link.tsx  loading.tsx  logo.tsx  navbar.tsx  screen.tsx  top-bar.tsx
src/hooks/: use-authenticate.ts  use-create-account.ts  use-create-wallet.ts  use-delete-account.ts  use-delete-wallet.ts  use-list-accounts.ts  use-mnemonics.ts
src/screens/: accounts.tsx  authenticate.tsx  create-wallet.tsx  credentials.tsx  mnemonic.tsx
src/theme/: badge.theme.ts  button.theme.ts  index.ts  link.theme.ts
src/utils/: utils.ts
