[package]
name = "dev-wallet"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
async-std = "1.10"

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
rand_core = "0.6.4"
sha2 = "0.10.8"
hex-literal = "0.4.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
aes = "0.8.4"
bitcoin = "0.32.2"
thiserror = "1.0.63"
uuid = "1.10.0"
bip39 = "2.0.0"
aes-gcm = "0.10.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
hex = "0.4.3"
argon2 = "0.5.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
